--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "mysql2": "^3.9.2",
-    "dotenv": "^16.4.5"
+    "mysql2": "^3.9.2"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
